[package]
name = "simple-undo"
version = "0.1.0"
authors = ["Adrien Turiot <didibear@gmail.com>"]
description = "Easy to use undo-redo library"
documentation = "https://docs.rs/simple-undo"
repository = "https://github.com/didibear/simple-undo"
readme = "README.md"
license = "MIT"
keywords = ["undo", "redo"]
categories = ["data-structures", "rust-patterns"]
edition = "2021"

[dependencies]
